# xv6-riscv-rust

./: .gitignore  Cargo.toml  MEMO  Makefile  README  README.md  flake.nix  libstatic_mut_demo.rlib  shell.nix
.nix/: dev-profile
kernel/: Cargo.toml  kernel.ld  rust_bio.rs  rust_console.rs  rust_entry.rs  rust_exec.rs  rust_file.rs  rust_fs.rs  rust_kalloc.rs  rust_kernel.rs  rust_kernelvec.rs  rust_kerror.rs  rust_lock.rs  rust_log.rs  rust_main.rs  rust_pipe.rs  rust_plic.rs  rust_printf.rs  rust_proc.rs  rust_sleeplock.rs  rust_spinlock.rs  rust_start.rs  rust_string.rs  rust_swtch.rs  rust_syscall.rs  rust_sysfile.rs  rust_trampoline.rs  rust_trap.rs  rust_uart.rs  rust_virtio_disk.rs  rust_vm.rs
mkfs/: Cargo.toml  mkfs.rs
user/: cat.rs  dorphan.rs  echo.rs  forktest.rs  forphan.rs  grep.rs  grind.rs  init.rs  isty.rs  kill.rs  life.rs  ln.rs  logstress.rs  ls.rs  mkdir.rs  primes.rs  printf.rs  rm.rs  rust_user.rs  sh.rs  stressfs.rs  ulib.rs  umalloc.rs  usertests.rs  usys.rs  wc.rs  zombie.rs
user/cat/: Cargo.toml  cargo_root.rs
user/dorphan/: Cargo.toml  cargo_root.rs
user/echo/: Cargo.toml  cargo_root.rs
user/forktest/: Cargo.toml  cargo_root.rs
user/forphan/: Cargo.toml  cargo_root.rs
user/grep/: Cargo.toml  cargo_root.rs
user/grind/: Cargo.toml  cargo_root.rs
user/init/: Cargo.toml  cargo_root.rs
user/isty/: Cargo.toml  cargo_root.rs
user/kill/: Cargo.toml  cargo_root.rs
user/life/: Cargo.toml  cargo_root.rs
user/ln/: Cargo.toml  cargo_root.rs
user/logstress/: Cargo.toml  cargo_root.rs
user/ls/: Cargo.toml  cargo_root.rs
user/mkdir/: Cargo.toml  cargo_root.rs
user/primes/: Cargo.toml  cargo_root.rs
user/rm/: Cargo.toml  cargo_root.rs
user/sh/: Cargo.toml  cargo_root.rs
user/stressfs/: Cargo.toml  cargo_root.rs
user/usertests/: Cargo.toml  cargo_root.rs
user/wc/: Cargo.toml  cargo_root.rs
user/zombie/: Cargo.toml  cargo_root.rs
